# Pundit-Writer

./: .gitignore  CONTINUATION_GUIDE.md  Cargo.toml  INTEGRATION_SUMMARY.md  INTERACTIVE_MODE_IMPROVEMENTS.md  METAPHORICAL_WRITER_README.md  NARRATIVE_FLOW_SYSTEM.md  POETRY_IMPROVEMENTS.md  README.md  SOUL_MEMORY_README.md  ancient_greek_and_english_dictionary_20250828_010943.txt  build.rs  build_with_vs.bat  great_dogs_in_history_encyclopedia.md  great_dogs_in_history_encyclopedia.txt  test_dynamic_lengths.py  textbook_phsyics_20250829_143844.txt  this_will_be_a_dictionary_written_in_chinese_to_learn_spanish_words_and_meanings_of_those_words_dictionary_20250830_002741.txt
.cargo/: config.toml
docs/: WindowsBuildRequirements.txt
example-outputs/: The Treason_20250817_015948.md  screenplay_Twister Generations_20250817_012350.md
generated_works/book_an_dragon_2.md/: The Riteborn Saga_20250828_004657.md  The Riteborn Saga_20250828_004657.txt
generated_works/book_first_deadly_in_deadly_work8/: First Deadly in Deadly_20250828_025206.md  (+1 more)
src/: adaptive_learning_engine.rs  advanced_creativity_engine.rs  advanced_learning_system.rs  book.rs  cli.rs  cli_simple.rs  cli_types.rs  cognitive_writing_engine.rs  config.rs  contemplative_writer_engine.rs  content.rs  continuation.rs  creative_block_recovery.rs  creative_enhancement.rs  dynamic_length.rs  emotional_writing_engine.rs  enhanced_writer_integration.rs  enhanced_writer_system.rs  error_pattern_recognition.rs  flow_aware_writer.rs  historical_writer_personas.rs  intelligent_pivot_engine.rs  intelligent_progression_tracker.rs  lib.rs  main.rs  main_backup.rs  main_debug.rs  main_minimal.rs  main_simple_cli.rs  main_test.rs  master_intelligence_system.rs  memory_utils.rs  metaphorical_writer.rs  models.rs  narrative_flow_monitor.rs  neural_creativity_enhancer.rs  nonstop_learning_mode.rs  ollama.rs  period_language_engine.rs  poetry_enhancements.rs  (+10 more)
(+50 files in other folders)
